turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:23: error: Int does not take parameters
    gauche()
          ^Turmite:24: error: overloaded method value avance with alternatives:
  => Int <and>
  (x$1: Int)Unit
 cannot be applied to ()
    avance()
    ^Turmite:26: error: Int does not take parameters
    droite()
          ^Turmite:27: error: overloaded method value avance with alternatives:
  => Int <and>
  (x$1: Int)Unit
 cannot be applied to ()
    avance()
    ^Turmite:29: error: Int does not take parameters
    droite()
          ^Turmite:30: error: Int does not take parameters
    droite()
          ^Turmite:31: error: overloaded method value avance with alternatives:
  => Int <and>
  (x$1: Int)Unit
 cannot be applied to ()
    avance()
    ^Turmite:34: error: overloaded method value avance with alternatives:
  => Int <and>
  (x$1: Int)Unit
 cannot be applied to ()
    avance()
    ^